# Rol

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.gradle.kts  build.rs  settings.gradle.kts
docs/: syntax.md
grammars/: RolParser.g4
src/: antlr.rs  bin.rs  common.rs  error.rs  lib.rs  main.rs
src/main/antlr/: RolLexer.g4  RolParser.g4
src/main/kotlin/io/github/seggan/rol/: Compilation.kt  DependencyManager.kt  Errors.kt  LuaInterpreter.kt  Main.kt
src/main/kotlin/io/github/seggan/rol/meta/: ClassUnit.kt  CompilationUnit.kt  FunctionUnit.kt  StructUnit.kt  VariableUnit.kt
src/main/kotlin/io/github/seggan/rol/parsing/: ImportCollector.kt  ParseTreeVisitor.kt  RolVisitor.kt  TypeChecker.kt
src/main/kotlin/io/github/seggan/rol/postype/: ConstantFolder.kt  NodeCollector.kt  Transformer.kt  Transpiler.kt
src/main/kotlin/io/github/seggan/rol/resolution/: DependencyManager.kt  FunctionHeader.kt  TypeResolver.kt
src/main/kotlin/io/github/seggan/rol/tree/: AccessModifier.kt  CommonInterfaces.kt  Location.kt
src/main/resources/: bit.lua  logback.xml  rol_core.lua
src/main/resources/stdlib/: convert.lua  list.txt  rio.lua  rstring.lua
src/main/rol/: convert.lua  convert.rol  rio.lua  rio.rol  rstring.lua  rstring.rol
src/main/rol/rol/lang/: convert.lua  convert.rol  io.lua  rio.lua  rio.rol  rlist.lua  rlist.rol  rol_core.lua  rstring.lua  rstring.rol
src/parsing/: antlr.rs  ast.rs  common.rs  lexer.rs  location.rs  macros.rs  mod.rs  parse.rs  parser.rs  rol_parser.pest
src/parsing/ast/: ast.rs  expr.rs  mod.rs
(+29 files in other folders)
